마크다운 예시 수정

--- a/_posts/2025-05-01-markdown.md
+++ b/_posts/2025-05-01-markdown.md
@@ -6,7 +6,7 @@ categories: [ "Jekyll", "웹개발" ]
 tages: [ "markdown", "블로그" ]
 ---
 
-Text can be **bold**, _italic_, or ~~strikethrough~~.
+Text can be **bold** or _italic_
 
 [Link to another page](https://snu.ac.kr).
 
@@ -45,9 +45,6 @@ This is a normal paragraph following a header. GitHub is a code hosting platform
 | ok           | good `oreos`      | hmm   |
 | ok           | good `zoute` drop | yumm  |
 
-### There's a horizontal rule below this.
-
-* * *
 
 ### Here is an unordered list:
 
@@ -78,6 +75,10 @@ This is a normal paragraph following a header. GitHub is a code hosting platform
   - level 2 item
   - level 2 item
 - level 1 item
+
+### There's a horizontal rule below this.
+
+* * *
 
 ### Image
 
